--- a/static/style.css
+++ b/static/style.css
@@ -66,3 +66,15 @@ html, body {
     background-color: #e0e0e0;
 }
 
+.logs {
+    position: fixed;
+    bottom: 0;
+    background: white;
+    left: 0;
+    right: 0;
+    padding: 10px;
+    border: 1px solid black;
+    max-height: 100px;
+    overflow-y: scroll;
+}
+
